--- a/action.yml
+++ b/action.yml
@@ -1,20 +1,21 @@
-name: 'Create image tag'
+name: 'Create artifact tag'
 
-description: 'Outputs a string value for use as an image tag. The output is dependent on whether this is a dev build or a release.'
+description: 'Outputs a string value for use as an artifact tag, intended for a Docker image or directory name. The output is dependent on whether this is a main build or a release creation event.'
 
 branding:
   icon: 'tag'
   color: 'white'
 
 outputs:
-  image-tag:
-    description: 'Image tag'
-    value: ${{ steps.image-tag-generator.outputs.image-tag }}
+  artifact-tag:
+    description: 'Artifact tag'
+    value: ${{ steps.artifact-tag-generator.outputs.tag }}
 
 runs:
   using: "composite"
   steps:
-    - id: image-tag-generator
+    - id: artifact-tag-generator
+      shell: bash
       run: |
         set -euxo pipefail
         
@@ -24,12 +25,12 @@ runs:
         if [ ${{ github.event_name }} = "release" ]
         then
           GIT_TAG_ONLY=$(echo $GITHUB_REF | sed "s|refs/tags/||")
-          IMAGE_TAG="${GIT_TAG_ONLY}"
+          TAG="${GIT_TAG_ONLY}"
         
         else
           GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-8)
-          IMAGE_TAG="${{ github.run_number }}-${GITHUB_SHA_SHORT}"
+          TAG="${{ github.run_number }}-${GITHUB_SHA_SHORT}"
         fi
         
-        echo "image-tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
-      shell: bash
+        echo "tag=$TAG" >> $GITHUB_OUTPUT
+        
